--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -28,3 +28,7 @@
         </nav>
     </div>
 </div>
+
+<div th:fragment="titulo(valor)" class="jumbotron mb-3">
+    <h1 class="display-4" th:text="${valor}"></h1>
+</div>
