Atualizado para formularioNovo

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -24,7 +24,7 @@
     <div class="mb-3 justify-content-center">
         <nav class="nav">
             <a class="nav-link" th:href="@{/home}">Home</a>
-            <a class="nav-link" th:href="@{/cartorio}">Cadastrar novo cartório</a>
+            <a class="nav-link" th:href="@{/cartorio/formularioNovo}">Cadastrar novo cartório</a>
         </nav>
     </div>
 </div>
